# WalkerSimulationFor2020WAIC

./: README.md
walker_WAIC_16.04_v1.0_20200603/walker_install/: local_setup.sh  setup.sh
walker_WAIC_16.04_v1.0_20200603/walker_install/include/aruco_msgs/: Marker.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/astra_camera/: AstraConfig.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/baxter_core_msgs/: AssemblyState.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  DigitalIOStates.h  EndEffectorCommand.h  EndEffectorState.h  EndpointStates.h  HeadPanCommand.h  JointTrajectory.h  ListCamerasResponse.h  NavigatorStates.h  SolvePositionIKRequest.h  URDFConfiguration.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/broadcast_teleop/: TaskCallScriptRequest.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/ces_task/: TaskArmCtrlRequest.h  TaskArmStatus.h  TaskHmiCtrl.h  TaskHmiCtrlRequest.h  TaskLegCtrlRequest.h  TaskLegStatus.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/cruiser_msgs/: ChassisCommand.h  ChassisCommandRequest.h  ChassisCommandResponse.h  ClearUMap.h  ClearUMapResponse.h  ClearUwbAnchor.h  ClearUwbAnchorRequest.h  ClearUwbAnchorResponse.h  CruiserJointSate.h  EskinMsg.h  GetMapJsonResponse.h  GetUwbAnchorRequest.h  GetUwbAnchorResponse.h  GetUwbSupportedModeRequest.h  GetVirtualPathRequest.h  GetVirtualWall.h  JointCtrl.h  MapJson.h  ObstacleStatus.h  PowerSetting.h  PowerSettingResponse.h  SetUMap.h  SetUMapRequest.h  SetUwbAnchor.h  SetUwbAnchorRequest.h  SetUwbAnchorResponse.h  VirtualWall.h  canudpSend.h  cruiserChargeSource.h  cruiserJointAction.h  cruiserNavigation.h  cruiserPowerAction.h  cruiserPowerActionResponse.h  cruiserSensorActionRequest.h  cruiserSensorActionResponse.h  cruiserSensorFloorCheckIr.h  cruiser_common_status.h  cruiser_diag_agg.h  cruiser_diagnostics.h  cruiser_joint_motion.h  (+17 more)
walker_WAIC_16.04_v1.0_20200603/walker_install/include/logger/: configureRequest.h  configureResponse.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/serial_device/: TaskCallSerialResponse.h  TaskServiceResponse.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/servo_ctrl/: EcatGetPVT.h  EcatGetVer.h  EcatGetVerResponse.h  EcatLimitSrvRequest.h  EcatPidSrv.h  EcatSetZero.h  SendFtAtCmd.h  SendFtAtCmdRequest.h  SetFtOffsetRequest.h  SetFtPeriodRequest.h  SetFtPeriodResponse.h  ecatservoctrl.hpp  servocanout.hpp  ubteccom.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/ubt_core_msgs/: AssemblyStates.h  CameraControl.h  CloseCamera.h  CloseCameraRequest.h  CollisionAvoidanceState.h  CollisionDetectionState.h  EndEffectorCommand.h  EndEffectorProperties.h  EndpointStates.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/walker_arm/: TaskService.h  TaskServiceRequest.h  TaskServiceResponse.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/walker_msgs/: ces_task_Status.h  leg_motion_Status.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/walker_srvs/: leg_motion_MetaFuncCtrl.h  leg_motion_MetaFuncCtrlRequest.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/walker_teleop/: Flysky.h
walker_WAIC_16.04_v1.0_20200603/walker_install/include/webots_api/: SceneSelection.h  SceneSelectionResponse.h
walker_WAIC_16.04_v1.0_20200603/walker_install/lib/: ap_bin
walker_WAIC_16.04_v1.0_20200603/walker_install/lib/astra_camera/: astra_camera_node
walker_WAIC_16.04_v1.0_20200603/walker_install/lib/cruiser_teleop/: cruiser_teleop_em_stop  (+1 more)
walker_WAIC_16.04_v1.0_20200603/walker_model/protos/: .can.cache  .floorlightandswitch.cache  .redlineone.cache  .redlinetwo.cache  .walker_12.cache  .wall.cache  can.proto  desk.proto  rectangle.proto
walker_WAIC_16.04_v1.0_20200603/walker_model/worlds/: WAIC.wbt
walker_WAIC_16.04_v1.1_20200608/walker_install/install/: .rosinstall
walker_WAIC_16.04_v1.1_20200608/walker_model/protos/: .television.cache  box.proto  wall.proto
walker_WAIC_16.04_v1.2_20200616/walker_install/install/share/cruiser_log_debug/: package.xml
walker_WAIC_16.04_v1.2_20200616/walker_install/lib/: ros_bin
walker_WAIC_16.04_v1.2_20200616/walker_install/share/cruiser_log/: package.xml
walker_WAIC_16.04_v1.2_20200616/walker_model/protos/: floorlightandswitch.proto
walker_WAIC_18.04_v1.0_20200603/: user_account.json
walker_WAIC_18.04_v1.0_20200603/walker_install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
walker_WAIC_18.04_v1.0_20200603/walker_install/lib/: Windows下读取、设置X86登录密码的方法.txt  udb_adapter
walker_WAIC_18.04_v1.0_20200603/walker_install/share/leg_motion/: package.xml
walker_WAIC_18.04_v1.0_20200603/walker_install/share/leg_motion/cmake/: leg_motionConfig.cmake
walker_WAIC_18.04_v1.0_20200603/walker_install/share/serial_device/: package.xml
walker_WAIC_18.04_v1.0_20200603/walker_install/share/serial_device/cmake/: serial_device-msg-paths.cmake  serial_deviceConfig.cmake
walker_WAIC_18.04_v1.0_20200603/walker_model/protos/: .cup.cache  .desk.cache  .floorlightandswitch_err.cache  .fridge.cache  .platformcart.cache  .walker_12Limited.cache  platformcart.proto
walker_WAIC_18.04_v1.0_20200603/walker_model/worlds/: .WAIC.wbproj
walker_WAIC_18.04_v1.1_20200608/walker_install/: .rosinstall  local_setup.sh  setup.sh
walker_WAIC_18.04_v1.1_20200608/walker_install/lib/: Windows╧┬╢┴╚ббв╔ш╓├X86╡╟┬╝├▄┬ы╡─╖╜╖и.txt
walker_WAIC_18.04_v1.1_20200608/walker_model/protos/: .redlinethree.cache  cup.proto  fridge.proto  redlineone.proto  television.proto
walker_WAIC_18.04_v1.1_20200608/walker_model/worlds/: .WAIC.wbproj
walker_WAIC_18.04_v1.2_20200616/walker_install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
walker_WAIC_18.04_v1.2_20200616/walker_model/protos/: .box.cache  .rectangle.cache  redlinethree.proto  redlinetwo.proto
walker_WAIC_18.04_v1.2_20200616/walker_model/worlds/: .WAIC.wbproj
(+2205 files in other folders)
