<package>
  <name>cruiser_log</name>
  <version>1.8.16</version>
  <description>The controller manager (CM) package provides the infrastructure to run controllers in a hard realtime loop.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/pr2_controller_manager</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eric Berger berger@willowgarage.com</author>
  <author>Stuart Glaser</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosparam</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/test/controller_plugin.xml"/>
  </export>
</package>
