<?xml version="1.0"?>
<package>
  <name>serial_device</name>
  <version>0.0.0</version>
  <description>serial_device</description>

  <maintainer email="xianwei.su@ubtrobot.com">aa</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>broadcast_teleop</build_depend>
  <build_depend>TaskService</build_depend>
  <build_depend>ces_task</build_depend>
  <build_depend>servo_ctrl</build_depend>
  <build_depend>cruiser_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>broadcast_teleop</run_depend>
  <run_depend>TaskService</run_depend>
  <run_depend>ces_task</run_depend>
  <run_depend>servo_ctrl</run_depend>
  <run_depend>cruiser_msgs</run_depend>

  <export>
  </export>
</package>
